src/styles/markdown.css
.custom-md {
    h1 {
        @apply text-3xl;
    }

    h1, h2, h3, h4, h5, h6 {
        .anchor {
            @apply transition -m-0.5 ml-[0.2ch] p-0.5 select-none opacity-0 no-underline !important;

            .anchor-icon {
                @apply mx-[0.45ch] !important;
            }
        }

        &:hover {
            .anchor {
                @apply opacity-100 !important;
            }
        }
    }

    a:not(.no-styling) {
        @apply relative bg-none font-medium text-[var(--primary)]
        underline decoration-[var(--link-underline)] decoration-1 decoration-dashed underline-offset-4;
        box-decoration-break: clone;
        -webkit-box-decoration-break: clone;
        display: inline-block;
    
        &:hover, &:active {
            @apply decoration-transparent;
            background: var(--btn-plain-bg-hover);
            border-bottom: 1px dashed var(--link-hover);
            text-decoration: none;
        }
    }

    code {
        @apply bg-[var(--inline-code-bg)] text-[var(--inline-code-color)] px-1 py-0.5 rounded-md overflow-hidden;

        font-family: 'JetBrains Mono Variable', ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, Liberation Mono, Courier New, monospace;
        &:before {
            content:none;
        }
        &:after {
            content:none;
        }

        counter-reset: line;
        span.line {
            &:before {
                @apply text-white/25 mr-4 w-4 inline-block;
                content: counter(line);
                counter-increment: line;
                direction: rtl;
            }
            &:last-child:empty, &:last-child:has(> span:empty:only-child) {
                display: none;
            }
        }
    }

    .copy-btn {
        all: initial;
        @apply bg-gray-700 hover:bg-gray-600 text-white opacity-0 shadow-lg shadow-black/50 absolute active:scale-90 h-8 w-8 top-3 right-3 text-sm rounded-lg transition-all ease-in-out z-20 cursor-pointer;
    }
    .frame:hover .copy-btn {
        opacity: 1;
    }

    .copy-btn-icon {
        @apply absolute top-1/2 left-1/2 transition -translate-x-1/2 -translate-y-1/2 w-4 h-4 fill-white pointer-events-none;
    }
    .copy-btn .copy-icon {
        @apply opacity-100 fill-white dark:fill-white/75;
    }
    .copy-btn.success .copy-icon {
        @apply opacity-0 fill-[var(--deep-text)]
    }
    .copy-btn .success-icon {
        @apply opacity-0 fill-white;
    }
    .copy-btn.success .success-icon {
        @apply opacity-100
    }

    .expressive-code {
        @apply my-4;
        ::selection {
            @apply bg-[var(--codeblock-selection)];
        }
    }


    ul, ol {
        li::marker {
            @apply text-[var(--primary)];
        }
    }

    blockquote {
        @apply not-italic border-transparent relative;
        font-weight: inherit;

        &:before {
            @apply content-[''] absolute -left-1 block transition bg-[var(--btn-regular-bg)] h-full w-1 rounded-full;
        }

        /* Remove the double quotes from default styles */
        p:before, p:after {
            @apply content-none;
        }

    }

    .katex-display-container {
        max-width: 100%;
        overflow-x: auto;
        margin: 1em 0;
    }
    table th,
    table td {
        vertical-align: middle;
    }

    .md-table-tight table th,
    .md-table-tight table td { vertical-align: middle; line-height: 1.0; }

    .md-table-tight table th p,
    .md-table-tight table td p { margin: 0; line-height: inherit; }

    .md-table-move-1 table { table-layout: fixed; width: 100%; }
    .md-table-move-1 th:nth-child(1), .md-table-move-1 td:nth-child(1) { width: 85%; }
    .md-table-move-1 th:nth-child(2), .md-table-move-1 td:nth-child(2) { width: 15%; }
    .md-table-move-1 table th p,
    .md-table-move-1 table td p { margin: 0; line-height: inherit; }

    .md-table-move-2 table { table-layout: fixed; width: 100%; }
    .md-table-move-2 th:nth-child(1), .md-table-move-2 td:nth-child(1) { width: 50%; }
    .md-table-move-2 th:nth-child(2), .md-table-move-2 td:nth-child(2) { width: 20%; padding-right: 0; }
    .md-table-move-2 th:nth-child(3), .md-table-move-2 td:nth-child(3) { width: 20%; }
    .md-table-move-2 table th p,
    .md-table-move-2 table td p { margin: 0; line-height: inherit; }

    .md-table-move-3 table { table-layout: fixed; width: 100%; }
    .md-table-move-3 th:nth-child(1), .md-table-move-3 td:nth-child(1) { width: 55%; }
    .md-table-move-3 th:nth-child(2), .md-table-move-3 td:nth-child(2) { width: 15%; padding-right: 0; }
    .md-table-move-3 th:nth-child(3), .md-table-move-3 td:nth-child(3) { width: 15%; padding-right: 0; }
    .md-table-move-3 th:nth-child(4), .md-table-move-3 td:nth-child(4) { width: 15%; }
    .md-table-move-3 table th p,
    .md-table-move-3 table td p { margin: 0; line-height: inherit; }

    table th[align="left"],
    table td[align="left"] { text-align: left; }
    table th[align="center"],
    table td[align="center"] { text-align: center; }
    table th[align="right"],
    table td[align="right"] { text-align: right; }

    table th[align="right"] :is(img, video, svg, picture, canvas),
    table td[align="right"] :is(img, video, svg, picture, canvas) { margin-left: auto !important; }

    img.md-icon {
        display: inline-block;
        vertical-align: text-bottom;
        line-height: 0;
        margin: 0;
        border-radius: 0 !important;
    }
    
}

